labs/lab4/testsuite/good/014.hs
main = print (if 1 < 2 then 33 else 44) ;  -- result 33
