labs/lab4/testsuite/bad/if-function-2.hs
K1 ignore = 1;

main = print (if K1 then 1 else 0);
